hello-world-app/src/main/k8s/pod.eap.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: 'jboss-rsyslog-0'
spec:
  selector:
    matchLabels:
      app: jboss-rsyslog-0
  replicas: 1
  template:
    metadata:
      labels:
        app: jboss-rsyslog-0
    spec:
      containers:
        - name: 'container'
          image: >-
            quay.io/mklaasse/jboss-eap-rsyslog:latest
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "1"
          ports:
            - containerPort: 8080
              protocol: TCP
          imagePullPolicy: Always  
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jboss-rsyslog-1
spec:
  selector:
    matchLabels:
      app: jboss-rsyslog-1
  replicas: 1
  template:
    metadata:
      labels:
        app: jboss-rsyslog-1
    spec:
      containers:
        - name: 'container'
          image: >-
            quay.io/mklaasse/jboss-eap-rsyslog:latest
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "1"
          ports:
            - containerPort: 8080
              protocol: TCP
          imagePullPolicy: Always  
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
