hello-world-app/src/main/k8s/pod.rsyslog.tcp.yaml
kind: Pod
apiVersion: v1
metadata:
  name: rsyslog-server-tcp
  labels:
    app: rsyslog-server-tcp
spec:
  securityContext:
    runAsNonRoot: true
    seccompProfile:
      type: RuntimeDefault
  containers:
    - name: rsyslog-server-tcp
      image: 'quay.io/mklaasse/rsyslog-server:tcp'
      ports:
        - containerPort: 2514
          protocol: TCP
      imagePullPolicy: Always
      securityContext:
        allowPrivilegeEscalation: false
        capabilities:
          drop:
            - ALL
