hello-world-app/src/main/k8s/pod.rsyslog.udp.yaml
kind: Pod
apiVersion: v1
metadata:
  name: rsyslog-server-udp
  labels:
    app: rsyslog-server-udp
spec:
  securityContext:
    runAsNonRoot: true
    seccompProfile:
      type: RuntimeDefault
  containers:
    - name: rsyslog-server-udp
      image: 'quay.io/mklaasse/rsyslog-server:udp'
      ports:
        - containerPort: 2514
          protocol: UDP      
      imagePullPolicy: Always
      securityContext:
        allowPrivilegeEscalation: false
        capabilities:
          drop:
            - ALL
