hello-world-app/src/main/k8s/service.eap.yaml
apiVersion: v1
kind: Service
metadata:
  name: jboss-rsyslog
spec:
  selector:
    app: jboss-rsyslog
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
