hello-world-app/src/main/k8s/service.rsyslog.tcp.yaml
apiVersion: v1
kind: Service
metadata:
  name: rsyslog-server
  namespace: jboss-eap-test
spec:
  selector:
    app: rsyslog-server
  ports:
    - protocol: TCP
      port: 2514
      targetPort: 2514
